# vm0

./: .dockerignore  .env.example  .env.local.tpl  .gitignore  .gitleaks.toml  .mailmap  .release-please-manifest.json  .semgrepignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  SECURITY.md  github_actions_comparison.md  lefthook.yml  package-lock.json  release-please-config.json  test-deploy.md  vm0.code-workspace
crates/: Cargo.toml  README.md  lefthook.yml
crates/.cargo/: config.toml
crates/ably-subscriber/: CHANGELOG.md  Cargo.toml
crates/ably-subscriber/examples/: smoke_test.rs  subscribe.rs
crates/ably-subscriber/src/: connection.rs  lib.rs  protocol.rs  subscribe.rs  types.rs
crates/ably-subscriber/tests/: integration.rs  protocol_decode.rs
crates/agent-diagnostics/: Cargo.toml
crates/agent-diagnostics/src/: lib.rs
crates/api-contracts/: Cargo.toml
crates/api-contracts/src/: lib.rs  route.rs
crates/api-contracts/tests/: routes.rs  types.rs
crates/block-cow/: CHANGELOG.md  Cargo.toml
crates/block-cow/src/: blockdev.rs  cache.rs  command.rs  device.rs  dmsetup.rs  error.rs  lib.rs  losetup.rs
crates/block-cow/tests/: integration.rs
crates/guest-agent/: CHANGELOG.md  Cargo.toml
crates/guest-agent/src/: artifact.rs  checkpoint.rs  cli.rs  codex_auth.rs  complete.rs  constants.rs  content_hash.rs  control.rs  env.rs  error.rs  events.rs  heartbeat.rs  http.rs  lib.rs  main.rs  masker.rs  memory.rs  metrics.rs  nofollow_fs.rs  paths.rs  session_history.rs  telemetry.rs  timing.rs  urls.rs
crates/guest-agent/tests/: chat_streaming.rs  chat_streaming_ably_failure.rs  chat_streaming_disabled.rs  claude_result_failure_logging.rs  cli_child_env.rs  cli_failure_diagnostic_session_id_masking.rs  cli_resume_id_stderr_masking.rs  cli_setup_failure.rs  cli_stderr_exact_limit_no_newline.rs  cli_stderr_invalid_utf8.rs  cli_stderr_invalid_utf8_long.rs  cli_stderr_logging.rs  cli_stderr_no_newline.rs  cli_stderr_overlong_lone_cr_no_newline.rs  cli_stderr_overlong_no_newline.rs  codex_jsonl_failure_logging.rs  codex_session_resume.rs  codex_setup_stderr_masking.rs  execute_cli_api_mode.rs  heartbeat_panic_reap_sigkill.rs  heartbeat_reap_sigkill.rs  http_env_missing_api_url.rs  integration.rs  no_api_mode.rs  post_result_reap.rs  post_result_reap_happy.rs  post_result_reap_sigkill.rs  process_control_channel.rs  process_control_env.rs  stuck_tool_reap_sigkill.rs  stuck_tool_stdout_eof_reap_sigkill.rs
crates/guest-common/: CHANGELOG.md  Cargo.toml
crates/guest-common/src/: lib.rs  log.rs  telemetry.rs
crates/guest-download/: CHANGELOG.md  Cargo.toml
crates/guest-download/src/: archive.rs  cleanup.rs  download.rs  error.rs  instructions.rs  lib.rs  main.rs  manifest.rs  plan.rs  source.rs
crates/guest-download/tests/: integration.rs
crates/guest-init/: CHANGELOG.md  Cargo.toml
crates/guest-init/src/: init.rs  lib.rs  main.rs  pid1.rs
crates/guest-mock-claude/: CHANGELOG.md  Cargo.toml
crates/guest-mock-claude/src/: args.rs  lib.rs  main.rs  process.rs  scenario.rs  transcript.rs
crates/guest-mock-claude/tests/: echo_jsonl.rs
crates/guest-mock-codex/: CHANGELOG.md  Cargo.toml
crates/guest-mock-codex/fixtures/: error-event.jsonl  event-mapping-rich.jsonl  invalid-api-key.jsonl  turn-failed.jsonl
crates/guest-mock-codex/src/: events.rs  fixtures.rs  lib.rs  main.rs  prompt.rs  session.rs
crates/guest-mock-codex/tests/: integration.rs
crates/guest-reseed/: CHANGELOG.md  Cargo.toml
crates/guest-reseed/src/: lib.rs  main.rs
crates/guest-runtime-paths/: CHANGELOG.md  Cargo.toml
crates/guest-runtime-paths/src/: lib.rs
crates/guest-write-file/: CHANGELOG.md  Cargo.toml
crates/guest-write-file/src/: lib.rs  main.rs
crates/guest-write-file/tests/: integration.rs
crates/nbd-cow/: CHANGELOG.md  Cargo.toml
crates/nbd-cow/src/: cow.rs  device_lock.rs  error.rs  lib.rs  netlink.rs  pool.rs  protocol.rs  server.rs
crates/nbd-cow/tests/: dispatch.rs  integration.rs  pool.rs
crates/process-control-ipc/: CHANGELOG.md  Cargo.toml
crates/process-control-ipc/src/: lib.rs
crates/reqeast/: CHANGELOG.md  Cargo.toml  README.md
crates/reqeast/src/: lib.rs
crates/runner/: CHANGELOG.md  Cargo.toml  build-rootfs.sh  build.rs
crates/runner/mitm-addon/: pyproject.toml
crates/runner/scripts/: agent-abnormal-exit-diagnostics.sh  build-rootfs.sh  build-template.sh  customize-rootfs.sh  inject-ca.sh  mitm-addon.py  mount-workspace-drive.sh  rootfs-browser.Dockerfile  rootfs-default.Dockerfile  rootfs.Dockerfile  unmount-workspace-drive.sh  verify-rootfs.sh
crates/runner/src/: api.rs  axiom_layer.rs  axiom_layer_tests.rs  benchmark.rs  build.rs  build_rootfs.rs  ca.rs  config.rs  config_tests.rs  deps.rs  dns.rs  error.rs  executor.rs  group.rs  host.rs  host_env.rs  host_file.rs  http.rs  idle_pool.rs  ids.rs  image_hash.rs  io_limits.rs  kmsg_log.rs  live_runner_instances.rs  lock.rs  log_file.rs  main.rs  network_log_drain.rs  network_log_manager.rs  network_logs.rs  paths.rs  prefetch.rs  private_fs.rs  process.rs  profile.rs  proxy.rs  r2_cache.rs  resource_budget.rs  retry.rs  run_cancellation.rs  (+15 more)
crates/runner/tests/: axiom_layer.rs
crates/sandbox/: CHANGELOG.md  Cargo.toml
crates/sandbox-fc/: CHANGELOG.md  Cargo.toml
crates/sandbox-fc/src/: api.rs  api_client.rs  balloon.rs  command.rs  config.rs  control.rs  cow_cleanup.rs  cow_pool.rs  factory.rs  guest_operations.rs  leaked_resources.rs  lib.rs  main.rs  park_coordinator.rs  paths.rs  prerequisites.rs  process.rs  runtime.rs  sandbox.rs  sandbox_control.rs  snapshot.rs  snapshot_provider.rs
crates/sandbox-mock/: Cargo.toml
crates/sandbox-mock/src/: lib.rs
crates/tracing-test-support/: Cargo.toml
crates/vm-common/: Cargo.toml
crates/vm-download/: Cargo.toml
crates/vm-init/: Cargo.toml
crates/vsock-agent/: Cargo.toml
crates/vsock-guest/: CHANGELOG.md  Cargo.toml
crates/vsock-host/: CHANGELOG.md  Cargo.toml
crates/vsock-proto/: CHANGELOG.md  Cargo.toml
crates/vsock-test/: CHANGELOG.md  Cargo.toml
(+7663 files in other folders)
