[workspace]
resolver = "3"
members = [
    "ably-subscriber",
    "guest-agent",
    "guest-common",
    "guest-download",
    "guest-init",
    "guest-mock-claude",
    "guest-reseed",
    "nbd-cow",
    "runner",
    "sandbox",
    "sandbox-fc",
    "sandbox-mock",
    "vsock-guest",
    "vsock-host",
    "vsock-proto",
    "reqeast",
    "vsock-test",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Internal crates
ably-subscriber = { path = "ably-subscriber" }
guest-agent = { path = "guest-agent" }
guest-common = { path = "guest-common" }
guest-download = { path = "guest-download" }
guest-init = { path = "guest-init" }
guest-mock-claude = { path = "guest-mock-claude" }
guest-reseed = { path = "guest-reseed" }
nbd-cow = { path = "nbd-cow" }
reqeast = { path = "reqeast" }
sandbox = { path = "sandbox" }
sandbox-fc = { path = "sandbox-fc" }
sandbox-mock = { path = "sandbox-mock" }
vsock-guest = { path = "vsock-guest" }
vsock-host = { path = "vsock-host" }
vsock-proto = { path = "vsock-proto" }

# External dependencies
aho-corasick = "1"
async-trait = "0.1"
aws-sdk-s3 = { version = "1", default-features = false }
aws-smithy-mocks = "0.2"
base64 = "0.22"
bitvec = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false }
clap = "4"
flate2 = "1"
futures-util = "0.3"
hex = "0.4"
hmac = "0.13.0-rc.6"
httpmock = "0.8"
libc = "0.2"
nix = { version = "0.31", default-features = false }
reqwest = { version = "0.13", default-features = false }
rmp-serde = "1"
rmpv = "1"
rustls = { version = "0.23", default-features = false }
sentry = { version = "0.47", default-features = false }
serde = "1"
serde_json = "1"
serde_yaml_ng = "0.10"
sha2 = "0.11"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = "1"
tokio-tungstenite = { version = "0.29", default-features = false }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
ureq = "3"
url = "2"
uuid = "1"
which = "8"
zstd = { version = "0.13", default-features = false }

[profile.release]
lto = true
strip = true
codegen-units = 1

# Runner-only CI profile — not used for guests (image_hash depends on --release).
[profile.ci]
inherits = "release"
lto = "thin"
codegen-units = 4

[workspace.lints.rust]
warnings = "deny"

# See clippy.toml for test-specific overrides (allow-unwrap-in-tests etc.)
[workspace.lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
