[package]
name = "block-cow"
version = "0.5.0"
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
nix = { workspace = true, features = ["user"] }
tempfile = { workspace = true }

[lints]
workspace = true
