[package]
name = "guest-agent"
version = "0.31.5"
edition.workspace = true

[dependencies]
aho-corasick.workspace = true
api-contracts.workspace = true
base64.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["clock"] }
flate2.workspace = true
guest-common.workspace = true
http-body = "1"
libc.workspace = true
pin-project-lite = "0.2"
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tar.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "process", "io-util", "fs", "sync", "net"] }
tokio-util.workspace = true
zstd.workspace = true

[dev-dependencies]
httpmock.workspace = true

[lints]
workspace = true
