[package]
name = "guest-download"
version = "0.20.20"
edition.workspace = true

[dependencies]
flate2.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tar.workspace = true
ureq = { workspace = true, features = ["platform-verifier"] }
guest-common.workspace = true

[dev-dependencies]
guest-runtime-paths.workspace = true
httpmock.workspace = true
tempfile.workspace = true

[lints]
workspace = true
