[package]
name = "guest-init"
version = "0.8.1"
edition.workspace = true
description = "Guest init process for Firecracker - filesystem setup, PID 1, and vsock-guest"

[dependencies]
libc.workspace = true
nix = { workspace = true, features = ["mount", "fs"] }
vsock-guest.workspace = true

[lints]
workspace = true
