[package]
name = "guest-mock-codex"
version = "0.0.0"
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v7"] }
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
