[package]
name = "guest-mock-codex"
version = "0.1.1"
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
