[package]
name = "runner"
version = "0.74.2"
edition.workspace = true

[dependencies]
ably-subscriber = { workspace = true }
sandbox = { workspace = true }
nbd-cow = { workspace = true }
sandbox-fc = { workspace = true }

async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde", "now"] }
clap = { workspace = true, features = ["derive", "env"] }
nix = { workspace = true, features = ["user", "signal", "fs", "process"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "signal", "time", "fs", "net", "io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
flate2 = { workspace = true }
reqeast = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
sentry = { workspace = true, features = ["panic"] }
which = { workspace = true }

# These dev-dependencies exist solely for release-please version tracking:
# cargo-workspace plugin includes dev-dependencies in its dependency graph,
# so runner-rs gets auto-bumped when any guest crate version changes.
[dev-dependencies]
guest-agent = { workspace = true }
guest-download = { workspace = true }
guest-init = { workspace = true }
guest-mock-claude = { workspace = true }
guest-reseed = { workspace = true }
sandbox-mock = { workspace = true }

[lints]
workspace = true
