[package]
name = "sandbox-fc"
version = "0.25.1"
edition.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
nbd-cow.workspace = true
libc.workspace = true
nix = { workspace = true, features = ["user", "inotify", "fs", "signal"] }
sandbox.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "fs", "rt", "rt-multi-thread", "macros", "sync", "io-util", "net", "time"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }
vsock-host.workspace = true
which.workspace = true

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true

[lints]
workspace = true
