[package]
name = "sandbox-mock"
version = "0.1.8"
edition.workspace = true

[dependencies]
async-trait.workspace = true
sandbox = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
