[package]
name = "vsock-guest"
version = "0.10.15"
edition.workspace = true

[dependencies]
libc.workspace = true
vsock-proto.workspace = true

[features]
# Enables local integration-test hooks. Do not enable for production guest binaries.
test-support = []

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
