[package]
name = "vsock-host"
version = "0.14.0"
edition.workspace = true
description = "Vsock host client for Firecracker VM communication"

[dependencies]
nix = { workspace = true, features = ["net"] }
tokio = { workspace = true, features = ["net", "io-util", "time", "rt", "macros", "sync", "fs"] }
tracing = { workspace = true }
vsock-proto.workspace = true

[lints]
workspace = true
