[package]
name = "vsock-test"
version = "0.9.21"
edition.workspace = true

[dependencies]
guest-write-file.workspace = true

[dev-dependencies]
vsock-guest = { workspace = true, features = ["test-support"] }
vsock-host.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
